--- a/scripts/install
+++ b/scripts/install
@@ -23,8 +23,8 @@ secret==$(ynh_string_random --length=36)
 
 # If you need to, you can define custom settings
 # (or remove this section entirely if not relevant for you)
-foo="bar"
-ynh_app_setting_set --key=foo --value=$foo
+#foo="bar"
+#ynh_app_setting_set --key=foo --value=$foo
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
@@ -112,6 +112,7 @@ ynh_script_progression "Starting $app's systemd service..."
 # Start a systemd service
 ynh_systemctl --service="$app-workers" --action="start"
 ynh_systemctl --service="$app-web" --action="start"
+ynh_systemctl --service="$app-browser" --action="start"
 
 #=================================================
 # END OF SCRIPT
