--- a/scripts/install
+++ b/scripts/install
@@ -34,7 +34,7 @@ ynh_script_progression "Setting up source files..."
 # Download, check integrity, uncompress and patch the source from manifest.toml
 ynh_setup_source --dest_dir="$install_dir"
 
-ynh_setup_source --dest_dir="/usr/bin/" --source="dlp"
+ynh_setup_source --dest_dir="/usr/bin/" --source_id="dlp"
 chmod +x "/usr/bin/yt-dlp"
 
 #=================================================
