--- a/scripts/install
+++ b/scripts/install
@@ -44,6 +44,17 @@ chmod 600 "$install_dir/karakeep.env"
 chown "$app:$app" "$install_dir/karakeep.env"
 
 #=================================================
+# LOGROTATE
+#=================================================
+ynh_script_progression "Configuring logrotate to manage application logfiles"
+
+ynh_config_add_logrotate
+
+touch /var/log/$app/${app}-workers.log
+touch /var/log/$app/${app}-web.log
+touch /var/log/$app/${app}-$app.log
+
+#=================================================
 # SYSTEM CONFIGURATION
 #=================================================
 ynh_script_progression "Adding system configurations related to $app..."
@@ -52,22 +63,16 @@ ynh_script_progression "Adding system configurations related to $app..."
 ynh_config_add_nginx
 
 # Create a dedicated systemd config
-ynh_config_add_systemd --service="$app-browser" --template="karakeep-browser.service"
-ynh_config_add_systemd --service="$app-web" --template="karakeep-web.service"
-ynh_config_add_systemd --service="$app-workers" --template="karakeep-workers.service"
+ynh_config_add_systemd --service="${app}-browser" --template="karakeep-browser.service"
+ynh_config_add_systemd --service="${app}-web" --template="karakeep-web.service"
+ynh_config_add_systemd --service="${app}-workers" --template="karakeep-workers.service"
 #ynh_config_add_systemd --service="meilisearch" --template="meilisearch.service"
 
-yunohost service add "$app-workers" --description="Bookmark-everything app" --log="/var/log/$app/$app-workers.log"
-yunohost service add "$app-web" --description="Bookmark-everything app" --log="/var/log/$app/$app-web.log"
-yunohost service add "$app-browser" --description="Bookmark-everything app" --log="/var/log/$app/$app.log"
+yunohost service add "${app}-workers" --description="Bookmark-everything app" --log="/var/log/$app/${app}-workers.log"
+yunohost service add "${app}-web" --description="Bookmark-everything app" --log="/var/log/$app/${app}-web.log"
+yunohost service add "${app}-browser" --description="Bookmark-everything app" --log="/var/log/$app/$app.log"
 
 #yunohost service add "meilisearch" --description="Bookmark-everything app" --log="/var/log/$app/$app.log"
-
-# Use logrotate to manage application logfile(s)
-#ynh_config_add_logrotate
-
-# Create a dedicated Fail2Ban config
-#ynh_config_add_fail2ban --logpath="/var/log/nginx/${domain}-error.log" --failregex="Regex to match into the log for a failed login"
 
 #=================================================
 # INSTALL KARAKEEP
@@ -105,9 +110,9 @@ popd
 ynh_script_progression "Starting $app's systemd service..."
 
 # Start a systemd service
-ynh_systemctl --service="$app-workers" --action="start"
-ynh_systemctl --service="$app-web" --action="start"
-ynh_systemctl --service="$app-browser" --action="start"
+ynh_systemctl --service="${app}-workers" --action="start"
+ynh_systemctl --service="${app}-web" --action="start"
+ynh_systemctl --service="${app}-browser" --action="start"
 
 #=================================================
 # END OF SCRIPT
